chore: refactored to use cases handle managing of Executions